[package]
name = "crypto-analysis-feed"
version = "0.1.0"
authors = ["clD11 <23483715+clD11@users.noreply.github.com>"]

[dependencies]
hyper = "0.12"
hyper-tls = "0.3.1"
http="0.1.17"
hmac = "0.7.0"
sha-1 = "0.8.1"
base64 = "0.9.0"
yaml-rust = "0.4"
lazy_static = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_derive = "1.0"
serde_json = "1.0.39"
twitter-stream = "0.8"
regex = "1.1.6"